--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
         </activity>
         <activity android:name=".QuestionActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".Score"></activity>
+        <activity android:name=".Score" />
+        <activity
+            android:name=".AcheivementActivity"
+            android:label="@string/title_activity_acheivement"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
